--- a/package.json
+++ b/package.json
@@ -10,12 +10,20 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
+    "react-date-range": "^1.4.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "react-icons": "^4.10.1",
+    "react-to-print": "^2.14.13",
+    "recharts": "^2.7.3",
+    "tailwindcss": "3.3.3",
+    "uuid": "^9.0.0"
   }
 }
